iter_language/tests/corpus/compose/valid/trigger-webhook-bind.iter
queue main file { path = "./.iter/queue" }

trigger hook webhook {
    bind = "127.0.0.1:9000"
    path = "/hooks"
    target = main
}
