iter_language/tests/corpus/compose/invalid/cron-priority-bad-keyword.iter
queue main file { path = "./.iter/queue" }

trigger nightly cron {
    schedule = "0 0 * * *"
    priority = urgent
    target = main
}
